     (hw_id)LED:1 will search for the EVENT specified with hw_id=1

     if (hw_id) is used (default if no type specified), and no EVENT with
     a matching hw_id can be found, a virtual event will access the control
     element directly. This is currently only relevant for the SET command.

     This matches with the behaviour of the "EVENT ... fwd_id=<id>" function.

   o new .NGR command: set_rgb <id> <r:g:b>
     E.g. "set_rgb (id)LED:1001 15:8:4"


MIDIbox NG V1.023
~~~~~~~~~~~~~~~~~

   o the current AIN/AINSER pot values can now be taken over by the meta events
     RetrieveAinValues and RetrieveAinserValues

   o new .NGR command: EXEC_META


MIDIbox NG V1.022
~~~~~~~~~~~~~~~~~

   o support for run scripts.
     See also the new manual page: http://www.ucapps.de/midibox_ng_manual_ngr.html

   o the new SysEx command ^label has been added. It allows to insert the ASCII code
     of a label string into a SysEx stream.
     See also cfg/tests/syxlabel.ngc

   o big GLCD font now correctly handled by ^txt and ^txt56 SysEx command

   o line number now displayed on errors in .NGC, .NGL or .NGR file

   o various bugfixes and improvements


MIDIbox NG V1.021
~~~~~~~~~~~~~~~~~

   o support for the "single_usb" option, which can be enabled with the
     bootloader update application V1.012 ("set usb_single 1")

     Use this option if you are working with a Windows PC which can't handle
     the 4 USB ports correctly (e.g. stucking MIDI, Filebrowser operations are failing, etc.)

   o added .NGS file which allows to store and restore values into
     up to 128 snapshots (0..127).
     The snapshot can be changed in the "Snap" menu in the SCS

   o the "Snap" menu also allows to dump all events (e.g. after a new
     snapshot has been loaded)

   o added new (hopefully selfexplaining) meta events:
     SetSnapshot, DecSnapshot, IncSnapshot, CycleSnapshot, LoadSnapshot,
     SaveSnapshot and DumpSnapshot