@@ -179,6 +179,7 @@ typedef enum {
   MBNG_EVENT_META_TYPE_SWAP_VALUES,
 
   MBNG_EVENT_META_TYPE_RUN_SECTION,
+  MBNG_EVENT_META_TYPE_RUN_STOP,
 
   MBNG_EVENT_META_TYPE_SCS_ENC,
   MBNG_EVENT_META_TYPE_SCS_MENU,
